# moonshine_kind

./: Cargo.toml  README.md
examples/: fruits.rs  instance_events.rs
src/: instance.rs  instance_trigger.rs  lib.rs
