[package]
name = "moonshine-kind"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "Simple type safety solution for Bevy"
categories = ["game-development"]
keywords = ["bevy", "ecs", "type-safety"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_kind"
repository = "https://github.com/Zeenobit/moonshine_kind"

[dependencies]
disqualified = "1"
bevy_ecs = { version = "0.18.0-dev", default-features=false, git = "https://github.com/mrchantey/bevy", branch="event-from-entity" }
bevy_reflect = { version = "0.18.0-dev", default-features=false, git = "https://github.com/mrchantey/bevy", branch="event-from-entity" }
bevy_utils = { version = "0.18.0-dev", default-features=false, git = "https://github.com/mrchantey/bevy", branch="event-from-entity" }

[dev-dependencies]
bevy = { version = "0.18.0-dev", default-features=false, git = "https://github.com/mrchantey/bevy", branch="event-from-entity" }
