[package]
name = "moonshine-kind"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Simple type safety solution for Bevy"
categories = ["game-development"]
keywords = ["bevy", "ecs", "type-safety"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_kind"
repository = "https://github.com/Zeenobit/moonshine_kind"

[dependencies]
bevy_ecs = "0.18"
bevy_derive = "0.18"
bevy_reflect = "0.18"
bevy_utils = "0.18"
disqualified = "1"

[dev-dependencies]
bevy = "0.18"
moonshine-util = "0.4"
